<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Welcome_activity"
    android:background="@drawable/welcome"
    >

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/accent_material_light"
        android:textSize="40dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/textView2" />


    <TextView android:text="@string/hello_world2" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/accent_material_light"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        />


    <TextView android:text="@string/hello_world3" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textColor="@color/button_material_dark"
        android:textSize="20dp"
        android:layout_marginLeft="90dp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Continue"
        android:id="@+id/button_welcome"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textStyle="bold"
    />


</RelativeLayout>
