<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rima.health_consultant.Patient_Account_Activity"
    android:background="@drawable/shormi">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Pname"
        android:id="@+id/textView19"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/accent_material_light"
        android:textSize="25dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/editText_pn"
        android:layout_alignTop="@+id/textView19"
        android:layout_marginLeft="170dp"
        android:ems="8">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Pemail"
        android:id="@+id/textView20"
        android:layout_below="@+id/editText_pn"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:textColor="@color/accent_material_light"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/doctorname"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        android:textColor="@color/accent_material_light"
        />

    <EditText
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/editText_doctorname"
        android:layout_below="@+id/textView20"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="180dp"
        android:editable="false"
        android:ems="8">

        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/specialist"
        android:id="@+id/textView22"
        android:layout_below="@id/editText_doctorname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="30dp"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="8"
        android:id="@+id/editText_pemail"
        android:layout_below="@id/editText_pn"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="150dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/editText_specialist"
        android:layout_below="@id/editText_doctorname"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="25dp"
        android:editable="false"
        android:ems="8">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hospitalname"
        android:id="@+id/textView23"
        android:layout_below="@+id/editText_specialist"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:textColor="@color/accent_material_light"
        />



    <EditText
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/editText_hname"
        android:layout_below="@+id/editText_specialist"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="180dp"
        android:editable="false"
        android:ems="8">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/textView24"
        android:layout_below="@+id/editText_hname"
        android:textSize="25dp"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:id="@+id/editText_date"
        android:layout_below="@+id/editText_hname"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:ems="8">

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Add Reservation"
        android:id="@+id/button_patient"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
