<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/shormi"
    tools:context="com.example.rima.health_consultant.Create_Account_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world13"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textSize="30sp"
        android:textColor="@color/abc_primary_text_material_light"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world14"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textColor="@color/abc_secondary_text_material_light"
        android:textSize="25dp"

        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/editText_fn"
        android:layout_alignTop="@+id/textView13"
        android:layout_marginLeft="150dp"
        android:ems="8">
    <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world15"
        android:id="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:textColor="@color/abc_secondary_text_material_light"
        android:layout_below="@+id/editText_fn"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        />

    <EditText
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:id="@+id/editText_ln"
        android:layout_alignTop="@+id/textView14"
        android:layout_marginLeft="155dp"
        android:ems="8">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world16"
        android:id="@+id/textView15"
        android:layout_below="@id/editText_ln"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:textColor="@color/abc_secondary_text_material_light"
        android:textSize="25dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editText_em"
        android:layout_alignTop="@+id/textView15"
        android:layout_marginLeft="160dp"
        android:ems="8">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world17"
        android:id="@+id/textView16"
        android:layout_below="@+id/editText_em"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:textSize="25dp"
        android:textColor="@color/abc_secondary_text_material_light"

        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="8"
        android:id="@+id/editText_pw"
        android:layout_alignTop="@+id/textView16"
        android:layout_marginLeft="160dp"
        >
    <requestFocus />
</EditText>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Create"
        android:id="@+id/button_account_ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:background="@drawable/button3"
        android:textColor="@color/abc_secondary_text_material_dark"
        />


</RelativeLayout>
