<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/select"
    tools:context="com.example.rima.health_consultant.Select_activity">

    <TextView android:text="@string/hello_world4" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textColor="@color/accent_material_light"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world5"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"

        />


    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Doctor's Advice"
        android:id="@+id/select_button1"
        android:layout_marginTop="110dp"
        android:background="@drawable/button3"
        android:textColor="@color/accent_material_dark"
        android:textStyle="bold"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world6"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"

        />




    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="For Serial"
        android:id="@+id/select_button2"
        android:layout_marginTop="230dp"
        android:background="@drawable/button3"
        android:textColor="@color/accent_material_dark"
        android:layout_below="@+id/textView3"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hello_world7"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView3"
        android:textStyle="bold"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        android:textColor="@color/abc_background_cache_hint_selector_material_dark"

        />





    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text=" Emergency"
        android:id="@+id/select_button3"
        android:layout_marginTop="360dp"
        android:background="@drawable/button3"
        android:textColor="@color/accent_material_dark"
        android:layout_below="@+id/textView3"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />





</RelativeLayout>
